fixed layout issue in mobile about page.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1015,10 +1015,10 @@ img {
   }
 
   .list li {
-    flex: 0 1 40%;
+    flex: 1 1 40%;
     /*font-size: 24px;*/
     justify-content: space-between;
-    margin: 15px;
+    margin: 1.0rem 1.0rem 1.3rem 1.0rem;
     text-align: center;
   }
 
